--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pandas==1.1.2
 matplotlib==3.3.1
 seaborn==0.11.0
 plotly==4.12.0
-
+setuptools>=58.0.0
 
 scikit-learn==0.24.2
 tensorflow-cpu==2.6.0
