--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# you should list here the libraries you will use in the project
 streamlit==0.85.0
 altair<5
 numpy==1.21.0
@@ -6,6 +5,8 @@ pandas==1.1.2
 matplotlib==3.3.1
 seaborn==0.11.0
 plotly==4.12.0
+setuptools==58.0.4
+wheel==0.38.4
 
 scikit-learn==0.24.2
 tensorflow-cpu==2.6.0
